--- a/estilos/styles.css
+++ b/estilos/styles.css
@@ -11,6 +11,10 @@ html {
     font-family: 'Roboto', sans-serif;
   }
 
+  body{
+    background-color: #E5E5E5;
+  }
+
     /* estilos del nav*/
 
   .navegador{
@@ -37,23 +41,30 @@ html {
 
   .fondo{
     display: flex;
-    height: 100vh;
     
     justify-content: center;
-    background-color: crimson;
+    background-color: #E5E5E5;
    
   }
-.ultimo{
-  background-color: yellow;
-}
+
 
 .delivery{
+  background-image: url(../img/delivery.jpg);
   width: 490px;
   height: 350px;
   margin-top: 5%;
 }
 
-.contenedor-arbolito{
+.delivery h2{
+  text-align: center;
+  color: #FC200C;
+}
+
+.delivery h2 span{
+  color: white;
+}
+
+.contenedor-podio{
   width: 490px;
   height: 350px;
   margin-top: 5%;
@@ -61,9 +72,52 @@ html {
 }
 
 .podio{
-  background-color: aqua;
-  
+  color: #FC200C;
   text-align: center;
 
 }
+
+.topcinco{
+  margin-left: 20%;
+}
+
+.contenedor-arbolito{
+  display: flex;
+  justify-content: space-around;
+  
+  
+}
+
+ol li{
+  font-weight: bold;
+  margin-bottom: 10px;
+  
+}
+
+/* estilos del footer */
+
+.informacion{
+  margin-top: 5%;
+  display: flex;
+  background-color: black;
+  color: white;
+  justify-content: space-between;
+  align-items: center;
+  
+}
+
+.ultimo ul{
+  list-style-type: none;
+}
+
+.ultimo li{
+  margin-top: 8px;
+}
+
+.ultima-imagen{
+  margin-right: 5%;
+}
+
+
+
  
